# flight-ops-optimiser-ifop

./: .gitignore  Dockerfile  LICENCE  Makefile  README.md  dashboard.py  flightopskey.pem  pyproject.toml  requirements.txt  requirements_dashboard.txt
.github/workflows/: ci-cd.yml
configs/: config.yaml
data/: flights_full_featured.csv  flights_recent_2023.csv  flights_recent_test.csv
flightops-env/: pyvenv.cfg
scripts/: test_dataset_filter.py
src/: __init__.py  dagster_pipeline.py  main.py
src/data/: __init__.py
src/data/cleaning/: __init__.py  flight_data_cleaner.py
src/data/ingestion/: __init__.py  flight_data_ingestor.py
src/data/preprocessing/: __init__.py  dataset_filter.py
src/models/: train_model.py
src/utils/: __init__.py  config.py  logging.py
src/visualisation/: __init__.py  delay_analyser.py
tests/: __init__.py  test_data_ingestion.py
